manifests/wireguard-nfs-volumes/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nfs-service
  namespace: nfs-wireguard
spec:
  selector:
    app: nfs-wireguard-gw
  ports:
  - name: nfs-tcp
    port: 2049
    protocol: TCP
    targetPort: 2049
  - name: nfs-udp
    port: 2049
    protocol: UDP
    targetPort: 2049
  - name: rpcbind-tcp
    port: 111
    protocol: TCP
    targetPort: 111
  - name: rpcbind-udp
    port: 111
    protocol: UDP
    targetPort: 111
  type: ClusterIP
