manifests/wireguard-nfs-volumes/base/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: nfs-wireguard
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: nfs-wireguard
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
